--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+hyper = "1.3.1"
+hyper-rustls = "0.27.1"
+tokio = { version = "1.37.0", features = ["full"] }
+tracing = "0.1.40"
