--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ hyper-rustls = "0.27.1"
 hyper-util = { version = "0.1.3", features = ["tokio", "full"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
