--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ hyper = "1.3.1"
 hyper-rustls = "0.27.1"
 hyper-util = { version = "0.1.3", features = ["tokio", "full"] }
 tokio = { version = "1.37.0", features = ["full"] }
+tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
